[package]
name = "quamputer"
version = "0.1.0"
authors = ["Bastien Aracil <findbastien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dependencies]
num-complex = "0.4"
num-traits = "0.2.14"
rand= "0.8.3"
serde={version = "1.0.126", features=["derive"]}
serde_json = "1.0.64"
generational-arena = "0.2.8"
druid = { git = "https://github.com/linebender/druid.git" }
